many cool changes

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,11 @@
     transform: rotate(360deg);
   }
 }
+
+.bg-primary {
+  background-color: #1a8cff;
+}
+
+body {
+  background-color: #748da6;
+}
